# pnv3

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  testing.py
pnv3/client/: __init__.py  __main__.py  flow.py  interface.py
pnv3/client/flow/: __init__.py  connection.py  welcome.py
pnv3/client/flows/: __init__.py
pnv3/client/lib/: __init__.py  flow.py  input.py  keypress.py  network.py  select.py  xtract.py
pnv3/client/objects/: __init__.py  enter.py  input.py  select.py
pnv3/server/: __init__.py  database.py
pnv3/server/frontend/: index.html  index.jinja2
pnv3/server/frontend/assets/css/: main.css
pnv3/server/frontend/assets/js/: auth.js  dashboard.js
pnv3/server/frontend/pages/: auth.jinja2  dash.jinja2
pnv3/server/routes/: __init__.py  api.py  web.py
